# model-service

./: .gitignore  Dockerfile  ReadMe.md  app.py  config.py  constants.py  docker-compose.yaml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: autobump.yml  release.yml  versioning.yml
data/: training.csv
docs/: add.yaml  predict.yaml
