[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "The model-service represents a wrapper service for the released ML model. It will offer a REST API to expose the model to other components and make it scalable."
authors = ["Rody Haket <r.haket@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
autopep8 = "^2.1.0"
flask-restful = "^0.3.10"
flask-cors = "^4.0.1"
pylint = "2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
