[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "The model-service represents a wrapper service for the released ML model. It will offer a REST API to expose the model to other components and make it scalable."
authors = ["Rody Haket <r.haket@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.3"
autopep8 = "^2.1.0"
flask-restful = "^0.3.10"
flask-cors = "^4.0.1"
pylint = "2.13"
numpy = "^1.26.4"
joblib = "^1.4.2"

gdown = "^5.2.0"
# ml-lib-remla = "^1.0.0"
flasgger = "^0.9.7.1"
starlette = "^0.37.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
